@@ -5,7 +5,6 @@ from config import hostname, port, username, password
 import sys
 import unittest
 import webdavlib
-import xml.xpath
 import time
 
 resource = '/SOGo/dav/%s/Calendar/test-webdavsync/' % username
@@ -19,11 +18,6 @@ class WebdavSyncTest(unittest.TestCase):
         delete = webdavlib.WebDAVDELETE(resource)
         self.client.execute(delete)
 
-    def _xpath_query(self, query, top_node):
-        xpath_context = xml.xpath.CreateContext(top_node)
-        xpath_context.setNamespaces({ "D": "DAV:" })
-        return xml.xpath.Evaluate(query, None, xpath_context)
-        
     def test(self):
         # missing tests:
         #   invalid tokens: negative, non-numeric, > current timestamp
@@ -49,8 +43,7 @@ class WebdavSyncTest(unittest.TestCase):
         self.assertEquals(query1.response["status"], 207,
                           ("query1: invalid status code: %d (!= 207)"
                            % query1.response["status"]))
-        token_node = self._xpath_query("/D:multistatus/D:sync-token",
-                                       query1.response["document"])[0]
+        token_node = query1.xpath_evaluate("/D:multistatus/D:sync-token")[0]
         # Implicit "assertion": we expect SOGo to return a token node, with a
         # non-empty numerical value. Anything else will trigger an exception
         token = int(token_node.childNodes[0].nodeValue)
@@ -62,8 +55,7 @@ class WebdavSyncTest(unittest.TestCase):
         query2 = webdavlib.WebDAVSyncQuery(resource, "1234", [ "getetag" ])
         self.client.execute(query2)
         self.assertEquals(query2.response["status"], 403)
-        cond_nodes = self._xpath_query("/D:error/D:valid-sync-token",
-                                       query2.response["document"])
+        cond_nodes = query2.xpath_evaluate("/D:error/D:valid-sync-token")
         self.assertTrue(len(cond_nodes) > 0,
                         "expected 'valid-sync-token' condition error")
 
